Allow Alpha3 to be released: change kie-commons version from 0.1.0-SNAPSHOT to 6.0.0-SNAPSHOT + kie-commons extends droolsjbpm-parent pom + remove duplicate pom info